[package]
name = "clap-test-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clack-host = { git = "https://github.com/prokopyl/clack/", rev = "404adaf4ffc6cd579f11628d80baeaaace437461", features = [
    "default",
] }
clack-extensions = { git = "https://github.com/prokopyl/clack/", rev = "404adaf4ffc6cd579f11628d80baeaaace437461", features = [
    "clack-host",
    "audio-ports",
    "note-ports",
    "gui",
    "log",
    "params",
    "timer",
    "raw-window-handle_06",
] }
cpal = "0.15.3"
crossbeam-channel = "0.5.13"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
midir = "0.10.0"
rayon = "1.10.0"
rtrb = "0.3.1"
walkdir = "2.3.3"
winit = { version = "0.30.5", default-features = false, features = [
    "rwh_06",
    "x11",
] }
wmidi = "4.0.10"
