[package]
name = "clap-test-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
clack-host = { version = "0.1.0", features = [
    "default",
] }
clack-extensions = { version = "0.1.0", features = [
    "clack-host",
    "audio-ports",
    "note-ports",
    "gui",
    "log",
    "params",
    "timer",
    "raw-window-handle_06",
] }
clack-finder = { git = "https://github.com/prokopyl/clack/", rev = "406e759a40cb604cf4466269415016f0203a12a3" }
cpal = "0.17.3"
crossbeam-channel = "0.5.13"
clap = { version = "4.6.1", features = ["derive"] }
midir = "0.11.0"
rayon = "1.12.0"
rtrb = "0.3.4"
winit = { version = "0.30.13", default-features = false, features = [
    "rwh_06",
    "x11",
] }
wmidi = "4.0.11"
